--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@ html, body {
 
 h1 {
     position: absolute;
-    top: 90%;
-    left: 50%;
+    top: 900px;
+    left: 500px;
     font-family: "tahoma";
+    transform: translate(-50%, -50%);
     color:rgb(255, 255, 255) ;
 }
 
