--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html, body {
 h1 {
     position: absolute;
     top: 900px;
-    left: 500px;
+    left: 55%;
     font-family: "tahoma";
     transform: translate(-50%, -50%);
     color:rgb(255, 255, 255) ;
