--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body {
 
 h1 {
     position: absolute;
-    top: 900px;
+    top: 90%;
     left: 55%;
     font-family: "tahoma";
     transform: translate(-50%, -50%);
